# OphtalmologyProject

./: .gitignore  README.md
ArithmeticOperations/src/: CMakeLists.txt  arithmetic.cpp  arithmetic.hpp
CreateImage/src/: CMakeLists.txt  imageCreation.cpp  imageCreation.hpp
Denoiser/all/src/: anisotropicFilter.cpp  anisotropicFilter.hpp  bm3dMain.cpp  main.cpp  main.hpp  selectArea.cpp  selectArea.hpp
Denoiser/bm3d/src/: CMakeLists.txt
EnfaceProjection/: CMakeLists.txt
EnfaceProjection/src/: enface.cpp  enface.hpp
LineShapeImage/src/: CMakeLists.txt  anisotropicFilter.hpp  itkLineShapeImageFilter.hxx  main.cpp  selectArea.cpp  selectArea.hpp  volume.hpp
Morphological/src/: CMakeLists.txt  blackTop.cpp  blackTop.hpp  close.cpp  close.hpp  main.cpp  open.cpp  open.hpp  types.hpp  whiteTop.cpp  whiteTop.hpp
Objectness/src/: CMakeLists.txt  Objectness.cpp  Objectness.hpp
PostProcess/src/: CMakeLists.txt  postProcess.cpp
ShapeExtraction/src/: CMakeLists.txt  ShapeExtraction.cpp  ShapeExtraction.hpp  itkLineShapeImageFilter.h  itkLineShapeImageFilter.hxx
StackDecomposer/src/: CMakeLists.txt  main.cpp
StackDecomposerOverlay/src/: CMakeLists.txt  main.cpp
WatershedImageFilter3d/src/: CMakeLists.txt  WatershedImageFilter.cxx  WatershedImageFilter.hxx
anisotropicFilter/src/: CMakeLists.txt  anisotropicFilter.cpp  anisotropicFilter.hpp  main.cpp
connectedComponent/src/: CMakeLists.txt  connectedComponent.cpp  connectedComponent.hpp
imageNoiser/src/: CMakeLists.txt  main.cpp
inverter/src/: CMakeLists.txt  inverter.cpp
medianFilter/src/: CMakeLists.txt  main.cpp  medianFilter.cpp  medianFilter.hpp
registration/: oct_regi.sh  oct_regi_test.sh
selectArea/src/: CMakeLists.txt  main.cpp  selectArea.cpp  selectArea.hpp
softThresholding/src/: CMakeLists.txt  softThresholding.cpp  softThresholding.hpp
thresholder/src/: CMakeLists.txt  Thresholding.cpp
virtualAveraging/src/: CMakeLists.txt  access.cpp  access.hpp  gaussianGenerator.cpp  gaussianGenerator.hpp  main.cpp
